[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sampling_planners"
version = "0.1.0"
description = "A Python library for sampling-based path planning with cost maps."
readme = "README.md"
authors = [
    { name = "Chengjin Wang", email = "2210991@tongji.edu.cn" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy>=1.18.0",
    "scipy>=1.5.0",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/Travelers-lab/"
Repository = "https://github.com/Travelers-lab/sampling_based_planner_library.git"
Documentation = "https://sampling-planners.readthedocs.io/"